@@ -6,3 +6,8 @@ process_multilib_options "";
 set_board_info compiler  "[find_gcc]";
 
 set_board_info bmk,use_alarm 1;
+
+# Do not use -lm on Cygwin
+if { [istarget "*-*-cygwin*"] } { 
+  set_board_info mathlib "";
+}
