@@ -271,6 +271,10 @@ proc prune_warnings { text } {
     # Libgloss libnosys defines functions that warn when linked in
     regsub -all "(^|\n)\[^\n\]*: In function\[^\n\]*\n\[^\n\]\[^\n\]*is not implemented and will always fail\[^\n\]*" $text "" text
 
+    # Cygwin cc1 warns about -fpic and -fPIC
+    regsub -all ".*: warning: -f(pic|PIC) ignored for target .*" $text ""
+text
+
     # It might be tempting to get carried away and delete blank lines, etc.
     # Just delete *exactly* what we're ask to, and that's it.
     return $text
